--- a/WebDev/day53/style.css
+++ b/WebDev/day53/style.css
@@ -1,1 +1,17 @@
-This is style.css in WebDev/day53
+*{
+    padding: 0;
+    margin: 0;
+}
+.main{
+    background-image: url(assets/images/bg.jpg);
+    height: 80vh;
+    position: relative;
+}
+.main .box{
+    height: 80vh;
+    width: 100%;
+    opacity: 0.5;
+    background-color: black;
+    position: absolute;
+    top:0%;
+}
